--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://obelekar1000-tech.github.io/Audumbar_Hostel_P1",
 "scripts": {
   "build": "next build",
+  "postbuild": "node scripts/addNoJekyll.js",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d out"
 },
